frontend/src/components/SearchResultsItem.module.css
.search_result_item {
  background-color: white !important;
  transition: 0.3s;
  user-select: none;
  border-top: solid 2px #f6f6f6;
}

.search_result_item:hover {
  cursor: pointer;
  background-color: #e1edff !important;
  border-bottom: solid 2px #e1edff;
}

.search_result_item:focus,
.search_result_item:active {
  border: none;
  outline: none;
}

.course_name {
  font-weight: bold;
}

.course_code {
  display: inline;
  color: rgba(0, 0, 0, 0.5);
  margin-right: 0.5rem;
}

.dot {
  display: inline;
}

.skills_areas {
  display: inline;
}

.course_section {
  display: inline;
  color: rgba(1, 1, 1, 0.4);
}

.extra_info {
  background-color: #e23e57;
  color: white;
  border-radius: 4px;
  width: max-content;
  padding: 0.2rem 0.4rem;
  font-weight: 600;
  font-size: 0.75rem;
}

.icon_ratings {
  font-size: 0.75rem;
}

.workload_icon_empty,
.workload_icon_full {
  padding: 1px;
}

.workload_icon_empty {
  color: #e8e8e8;
}

.rating_icon_empty,
.rating_icon_full {
  padding: 1px;
}

.rating_icon_empty {
  color: #e8e8e8;
}

.rating_cell {
  width: max-content;
  text-align: center;
  font-weight: 600;
  border-radius: 6px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 0.9rem;
  padding: 0.2em 0.3em;
}

.course_location{
  font-weight: 600 !important;
}

.online_tag{
  margin: 1px;
  font-size: 0.8rem !important;
  font-weight: 600 !important;
  padding: 2px 4px !important;
  border-radius: 6px !important;
  width: max-content;
  background: rgba(0,0,0,0.1);
}

.tag {
  margin: 1px;
  font-size: 0.8rem !important;
  font-weight: 600 !important;
  padding: 4px 6px !important;
  border-radius: 6px !important;
}

.none {
  background-color: rgb(102, 102, 102) !important;
}

.friends_count {
  display: flex;
  align-items: center;
}

.toggle_worksheet {
  background-color: white !important;
  color: rgba(1, 1, 1, 0.6) !important;
  border: none !important;
  border-radius: 8px !important;
  font-weight: bold !important;
  font-size: 1.5rem !important;
}

.toggle_worksheet:hover {
  background-color: rgba(1, 1, 1, 0.1);
  color: black;
}

.toggle_worksheet_mobile {
  border-radius: 8px;
  font-size: 1rem;
}

.expanded_card {
  background-color: white;
}

.conflict_error {
  position: absolute;
  top: 0px;
  right: 0px;
  transform: translate(-50%, 0%);
}

